# Zeta

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  WAVE_7B_PHASE3_IMPLEMENTATION.md  enhancements.md  enhancements_technical.md  false  index.html  opencode.jsonc  package-lock.json  package.json  skills-lock.json
.agents/skills/jira/: README.md  SKILL.md
.agents/skills/rust-engineer/: SKILL.md
.github/workflows/: build-binaries.yml  pages.yml  release.yml
docs/: RELEASING.md  TERMINAL_BEHAVIOR.md  TESTING.md  adr-0001-architecture.md  improvements-roadmap.md  performance-baseline.md  ssh_sftp_usage.md
docs/examples/: zeta-config.toml
docs/superpowers/plans/: 2026-03-24-custom-icon-font.md  2026-03-24-preview-panel-redesign.md  2026-04-07-wave1a-appstate-decomposition.md  2026-04-07-wave1b-ui-module-split.md  2026-04-07-wave1c-multiworker-editor-markdown.md  2026-04-07-wave2a-input-routing.md  2026-04-07-wave2b-mouse-support.md  2026-04-08-wave3a-editor-rope-backend.md  2026-04-08-wave4a-git-integration.md  2026-04-08-wave4c-editor-fullscreen-sync.md  2026-04-08-wave4d-quickfilter-fuzzy-find.md  2026-04-08-wave5a-find-replace-watcher.md  2026-04-08-wave5b-bookmarks-trash.md  2026-04-08-wave5c-shell-integration.md  2026-04-08-wave6a-archive-browsing.md  2026-04-08-wave6b-directory-diff.md  2026-04-08-wave7a-ssh-sftp.md  2026-04-12-wave8a-embedded-terminal.md  2026-04-13-file-operation-identity-hardening.md  2026-04-13-operation-safety-hardening.md  2026-04-13-workspaces.md  2026-04-25-flyout-submenu.md  2026-04-25-git-diff-viewer.md  2026-04-25-ui-ux-revamp.md  2026-04-26-preview-enhancements.md  ROADMAP.md  wave7b-enhancements.md
docs/superpowers/specs/: 2026-03-24-custom-icon-font-design.md  2026-03-24-neo-commander-design.md  2026-04-07-architecture-remediation-design.md  2026-04-13-file-operation-identity-hardening-design.md  2026-04-13-operation-safety-hardening-design.md  2026-04-13-workspaces-design.md  (+5 more)
scripts/: fix_follow_symlink.py  fix_glob_test.py  fix_scan_cache_pane_literals.py  fix_symlink_compile.py  patch_cache_populate.py  patch_cache_refresh.py  patch_cache_tests.py  patch_lib_utils.py  patch_pane_filter.py  patch_scan_cache_pane.py  patch_symlink_actions.py  patch_symlink_keys.py  patch_symlink_state.py  patch_symlink_ui.py  release.py
site/: index.html
src/: action.rs  app.rs  config.rs  diff.rs  editor.rs  event.rs  finder.rs  fs.rs  git.rs  highlight.rs  icon.rs  jobs.rs  lib.rs  main.rs  palette.rs  pane.rs  preview.rs  pty.rs  session.rs  state.rs  ui.rs
src/fs/: backend.rs  local.rs  scan_diff.rs  sftp.rs
src/state/: bookmarks.rs  dialog.rs  editor_state.rs  menu.rs  mod.rs  overlay.rs  pane_set.rs  preview_state.rs  prompt.rs  settings.rs  ssh.rs  terminal.rs  types.rs
src/testing/: e2e.rs  mod.rs
src/ui/: bookmarks.rs  code_view.rs  debug.rs  editor.rs  finder.rs  git_diff.rs  highlight.rs  layout_cache.rs  markdown.rs  menu_bar.rs  mod.rs  overlay.rs  palette.rs  pane.rs  preview.rs  settings.rs  ssh.rs  styles.rs  terminal.rs
src/utils/: glob_match.rs  mod.rs
tests/: e2e_integration.rs  font_asset.rs  fs_integration.rs  preview_enhancements.rs  smoke.rs  ssh_verification.rs  terminal_integration.rs
(+21 files in other folders)
