[package]
name = "zeta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
crossterm = "0.28"
ratatui = "0.29"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "5.3", default-features = false, features = ["default-fancy", "default-syntaxes", "default-themes"] }
thiserror = "2.0"
toml = "0.8"
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }
